MS Exchange Access Web Access kills window upon download finish when single window mode is set to 'reuse'. b=354701, sr=pinkerton